--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 			<body tex-align: center >
 
 			<nav>
-				<a href="file:///Users/ashleymehl/Desktop/background.html"> Background </a> |		
-				<a href="file:///Users/ashleymehl/Desktop/projectobjectives.html"> Project Objectives </a> |
-				<a href="file:///Users/ashleymehl/Desktop/keymessages.html"> Key Messages </a> |
-				<a href="file:///Users/ashleymehl/Desktop/targetaudiences&comparablebus.html"> Target Audiences and Comparable Businesses </a> |		
+				<a href="background.html"> Background </a> |		
+				<a href="projectobjectives.html"> Project Objectives </a> |
+				<a href="keymessages.html"> Key Messages </a> |
+				<a href="targetaudiences&comparablebus.html"> Target Audiences and Comparable Businesses </a> |		
 			</nav>
 			</body>
 		<body>
