--- a/background.html
+++ b/background.html
@@ -4,10 +4,10 @@
 		<header>
 			<body>
 				<nav> 
-					<a href="file:///Users/ashleymehl/Desktop/LIS351%20html.html"> Home </a> |
-					<a href="file:///Users/ashleymehl/Desktop/projectobjectives.html">Project Objectives</a> |
-					<a href="file:///Users/ashleymehl/Desktop/keymessages.html">Key Messages</a> |
-					<a href="file:///Users/ashleymehl/Desktop/targetaudiences&comparablebus.html">Target Audiences and Comparable Businesses</a> </nav>
+					<a href="index.html"> Home </a> |
+					<a href="projectobjectives.html">Project Objectives</a> |
+					<a href="keymessages.html">Key Messages</a> |
+					<a href="targetaudiences&comparablebus.html">Target Audiences and Comparable Businesses</a> </nav>
 			<style>
 				body {background-color: yellow;}
 			</style>
