--- a/keymessages.html
+++ b/keymessages.html
@@ -4,10 +4,10 @@
 		<header>
 			<body>
 				<nav> 
-					<a href="file:///Users/ashleymehl/Desktop/LIS351%20html.html"> Home </a> |
-					<a href="file:///Users/ashleymehl/Desktop/background.html">Background</a> |
-					<a href="file:///Users/ashleymehl/Desktop/projectobjectives.html">Project Objectives</a> |
-				<a href="file:///Users/ashleymehl/Desktop/targetaudiences&comparablebus.html">Target Audiences and Comparable Businesses</a> | </nav>
+					<a href="index.html"> Home </a> |
+					<a href="background.html">Background</a> |
+					<a href="projectobjectives.html">Project Objectives</a> |
+				<a href="targetaudiences&comparablebus.html">Target Audiences and Comparable Businesses</a> | </nav>
 			<style>
 				body {background-color: white ;}
 			</style>
