--- a/projectobjectives.html
+++ b/projectobjectives.html
@@ -4,11 +4,11 @@
 		<header>
 			<body>
 				<nav> 
-					<a href="file:///Users/ashleymehl/Desktop/LIS351%20html.html"> Home </a> |
-					<a href="file:///Users/ashleymehl/Desktop/background.html"> Background</a> |
-					<a href="">Key Messages</a> |
-					<a href="file:///Users/ashleymehl/Desktop/keymessages.html">Key Messages</a> |
-					<a href="file:///Users/ashleymehl/Desktop/targetaudiences&comparablebus.html">Target Audiences and Comparable Businesses</a> </nav>
+					<a href="index.html"> Home </a> |
+					<a href="background.html"> Background</a> |
+				
+					<a href="keymessages.html">Key Messages</a> |
+					<a href="targetaudiences&comparablebus.html">Target Audiences and Comparable Businesses</a> </nav>
 			<style>
 				body {background-color: green;}
 			</style>
