--- a/targetaudiences&comparablebus.html
+++ b/targetaudiences&comparablebus.html
@@ -5,10 +5,10 @@
 		<header>
 			<body>
 				<nav> 
-					<a href="file:///Users/ashleymehl/Desktop/LIS351%20html.html"> Home </a> |
-					<a href="file:///Users/ashleymehl/Desktop/background.html">Background</a> |
-					<a href="file:///Users/ashleymehl/Desktop/projectobjectives.html">Project Objectives</a> |
-					<a href="file:///Users/ashleymehl/Desktop/keymessages.html">Key Messages</a> </nav>
+					<a href="index.html"> Home </a> |
+					<a href="background.html">Background</a> |
+					<a href="projectobjectives.html">Project Objectives</a> |
+					<a href="keymessages.html">Key Messages</a> </nav>
 			<style>
 				body {background-color: teal;}
 			</style>
