--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 	<nav>
 	<a href="https://biztimes.com/randy-mehl/">Randy Mehl </a>
 </nav>
-	<object width="400px" height="500px" data="randy_mehl.pdf"></object>
+    
+<img src="randy_mehl.jpeg" alt="A Portrait of Randy Mehl">
+
 	Image: Randy Mehl by 2020 BizTimes Media, LLC at https://biztimes.com/randy-mehl/ , CC BY-ND
 </body> 
 
