--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<a href="https://biztimes.com/randy-mehl/">Randy Mehl </a>
 </nav>
     
-<img src="randy_mehl.jpeg" alt="A Portrait of Randy Mehl">
+<img src="randymehl.jpeg" alt="A Portrait of Randy Mehl">
 
 	Image: Randy Mehl by 2020 BizTimes Media, LLC at https://biztimes.com/randy-mehl/ , CC BY-ND
 </body> 
